--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,3 +36,17 @@ code {
   color: #67809f;
 }
 
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  width: auto;					
+  height: auto;					
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
+  display: inline-block;
+}
+
